; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/matrox/extr_i2c-matroxfb.c_matroxfb_gpio_getscl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/matrox/extr_i2c-matroxfb.c_matroxfb_gpio_getscl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_bit_adapter = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @matroxfb_gpio_getscl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @matroxfb_gpio_getscl(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.i2c_bit_adapter*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.i2c_bit_adapter*
  store %struct.i2c_bit_adapter* %5, %struct.i2c_bit_adapter** %3, align 8
  %6 = load %struct.i2c_bit_adapter*, %struct.i2c_bit_adapter** %3, align 8
  %7 = getelementptr inbounds %struct.i2c_bit_adapter, %struct.i2c_bit_adapter* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @matroxfb_read_gpio(i32 %8)
  %10 = load %struct.i2c_bit_adapter*, %struct.i2c_bit_adapter** %3, align 8
  %11 = getelementptr inbounds %struct.i2c_bit_adapter, %struct.i2c_bit_adapter* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = and i32 %9, %13
  %15 = icmp ne i32 %14, 0
  %16 = zext i1 %15 to i64
  %17 = select i1 %15, i32 1, i32 0
  ret i32 %17
}

declare dso_local i32 @matroxfb_read_gpio(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
